syntax = "proto3";

option go_package = "./kvrows";

message RowData {
    ProposalData Proposal = 1;
    repeated RowValue Rows = 2;
}

message RowValue {
    uint64 Version = 1;
    bytes Value = 2;
}

message ProposalData {
    uint64 TXID = 1;
    repeated ProposedUpdate Updates = 2;
}

message ProposedUpdate {
    uint32 SID = 1; // Statement ID
    bytes Value = 2;
}

enum TransactionState {
    Active = 0;
    Committed = 1;
    Aborted = 2;
}

message TransactionData {
    uint64 Epoch = 1;
    TransactionState State = 2;
    uint64 Version = 3;
    repeated bytes UpdatedKeys = 4;
}
